--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8795 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8788 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
@@ -269,6 +269,8 @@
 
 <li><a href=sund.site/Blogroll.html>2024-10-23 Blogroll</a></li>
 
+<li><a href=sakurawald.github.io/favorite%20krunner%20plugins.html>2024-10-23 favorite krunner plugins</a></li>
+
 <li><a href=informal.top/How%20to%20learn%20knowledge%20in%20new%20fields%3F.html>2024-10-23 How to learn knowledge in new fields?</a></li>
 
 <li><a href=informal.top/Notes%20of%20flash-attention.html>2024-10-23 Notes of flash-attention</a></li>
@@ -310,6 +312,8 @@
 <li><a href=informal.top/Weekly-%236%20Cost%20of%20PopTranslate.html>2024-09-29 Weekly-#6 Cost of PopTranslate</a></li>
 
 <li><a href=mabbs.github.io/%E7%94%A8CF%20Vectorize%E6%8A%8A%E5%8D%9A%E5%AE%A2%E4%BD%9C%E4%B8%BA%E8%81%8A%E5%A4%A9AI%E7%9A%84%E7%9F%A5%E8%AF%86%E5%BA%93.html>2024-09-27 用CF Vectorize把博客作为聊天AI的知识库</a></li>
+
+<li><a href=sakurawald.github.io/fix%20the%20cpu%20frequency%20throttle%20after%20bad%20charging.html>2024-09-25 fix the cpu frequency throttle after bad charging</a></li>
 
 <li><a href=yuanj.top/Following.html>2024-09-24 Following</a></li>
 
@@ -865,7 +869,7 @@
 
 <li><a href=www.zhaohuabing.com/Envoy%20Gateway%20%E5%8F%91%E5%B8%83%E9%80%9A%E7%94%A8%E5%8F%AF%E7%94%A8%E7%89%88%E6%9C%AC%201.0.0%20%EF%BC%81.html>2024-03-15 Envoy Gateway 发布通用可用版本 1.0.0 ！</a></li>
 
-<li><a href=sakurawald.github.io/rescue%20-%20system%20corrupted%20after%20forced%20shutdown%20during%20system%20upgrade.html>2024-03-14 rescue - system corrupted after forced shutdown during system upgrade</a></li>
+<li><a href=sakurawald.github.io/rescue%20a%20corrupted%20system%20after%20forced%20shutdown%20during%20system%20upgrade.html>2024-03-14 rescue a corrupted system after forced shutdown during system upgrade</a></li>
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E4%B8%8D%E8%A6%81%E6%8A%8A%E7%BB%86%E8%8A%82%E7%89%B9%E5%BE%81%E5%BD%93%E4%BD%9C%E8%AE%BE%E8%AE%A1.html>2024-03-13 不要把细节特征当作设计</a></li>
 
@@ -1253,7 +1257,7 @@
 
 <li><a href=lihan3238.github.io/%E7%AE%A1%E4%BB%96%E5%91%A2%E8%BF%99%E9%87%8C%E5%B0%B1%E6%98%AF%E7%88%B7%E7%9A%84%E7%A9%BA%E9%97%B4%E4%BA%86.html>2023-12-08 管他呢这里就是爷的空间了</a></li>
 
-<li><a href=sakurawald.github.io/guide-to-install-qubes-on-qemu.html>2023-12-07 guide-to-install-qubes-on-qemu</a></li>
+<li><a href=sakurawald.github.io/guide%20to%20install%20qubes%20on%20qemu.html>2023-12-07 guide to install qubes on qemu</a></li>
 
 <li><a href=codeinchinese.com/%E4%B8%AD%E5%9B%BD%E5%BC%8F%E6%95%99%E8%82%B2%E7%9A%84%E4%B8%8D%E8%B6%B3%E4%B9%8B%E5%A4%84%E5%9C%A8%E5%93%AA%EF%BC%9F.html>2023-12-07 中国式教育的不足之处在哪？</a></li>
 
@@ -1324,10 +1328,6 @@
 <li><a href=blog.mauve.icu/Codeforces%20Round%20905%20%28Div.%203%29.html>2023-11-27 Codeforces Round 905 (Div. 3)</a></li>
 
 <li><a href=jasonkayzk.github.io/%E8%B7%B3%E8%B7%B3%E8%9B%99%E6%97%A5%E8%AF%AD%E8%AF%BB%E5%BA%93-A-VOL1-1-01-%E5%A5%B3%E3%81%AE%E5%AD%90.html>2023-11-26 跳跳蛙日语读库-A-VOL1-1-01-女の子</a></li>
-
-<li><a href=sakurawald.github.io/trick-to-fake-the-github-board.html>2023-11-26 trick-to-fake-the-github-board</a></li>
-
-<li><a href=sakurawald.github.io/clean-unused-chunks-in-minecraft.html>2023-11-26 clean-unused-chunks-in-minecraft</a></li>
 
 <li><a href=qingbob.com/Tech%20Lead%20%E8%A6%81%E5%AD%A6%E4%BC%9A%E6%88%B4%E7%9D%80%E9%95%A3%E9%93%90%E8%B7%B3%E8%88%9E.html>2023-11-26 Tech Lead 要学会戴着镣铐跳舞</a></li>
 
@@ -2033,8 +2033,6 @@
 
 <li><a href=f2h2h1.github.io/%E6%96%87%E4%BB%B6%E7%9A%84%E4%B8%8A%E4%BC%A0%E5%92%8C%E4%B8%8B%E8%BD%BD.html>2023-05-06 文件的上传和下载</a></li>
 
-<li><a href=sakurawald.github.io/play-on-minecraft-server-configuration.html>2023-05-06 play-on-minecraft-server-configuration</a></li>
-
 <li><a href=conge.livingwithfcs.org/%E5%BE%88%E8%AE%A4%E7%9C%9F%E7%9A%84%E5%9C%A8%E8%80%83%E8%99%91%E4%B8%8D%E5%86%8D%E4%BD%BF%E7%94%A8%E8%B1%86%E7%93%A3%E8%BF%99%E4%BB%B6%E4%BA%8B.html>2023-05-05 很认真的在考虑不再使用豆瓣这件事</a></li>
 
 <li><a href=yuanj.top/%E5%B8%B8%E8%A7%81%E8%AE%BA%E6%96%87%E6%9C%9F%E5%88%8A%E7%B4%A2%E5%BC%95%E5%88%86%E7%B1%BB.html>2023-05-04 常见论文期刊索引分类</a></li>
@@ -2055,6 +2053,8 @@
 
 <li><a href=tifa-233.com/%E6%8B%9F%E9%98%B5%E7%AE%80%E4%BB%8B%EF%BC%88unfin%EF%BC%89.html>2023-05-01 拟阵简介（unfin）</a></li>
 
+<li><a href=sakurawald.github.io/play%20on%20minecraft%20server%20configuration.html>2023-05-01 play on minecraft server configuration</a></li>
+
 <li><a href=tifa-233.com/%E9%A2%98%E8%A7%A3%20-%20%5BLuogu%20P5824%5D%20%E5%8D%81%E4%BA%8C%E9%87%8D%E8%AE%A1%E6%95%B0%E6%B3%95.html>2023-05-01 题解 - [Luogu P5824] 十二重计数法</a></li>
 
 <li><a href=zsqk.github.io/GitHub%20%E6%8A%95%E7%A5%A8%E8%AE%BE%E8%AE%A1.html>2023-05-01 GitHub 投票设计</a></li>
@@ -2065,7 +2065,7 @@
 
 <li><a href=young-lord.github.io/Kindle%20%E8%B6%8A%E7%8B%B1%E8%AE%B0%E5%BD%95.html>2023-04-30 Kindle 越狱记录</a></li>
 
-<li><a href=sakurawald.github.io/play-on-kde.html>2023-04-27 play-on-kde</a></li>
+<li><a href=sakurawald.github.io/play%20on%20kde.html>2023-04-26 play on kde</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20%7C%20303%20%E7%83%B9%E9%A5%AA%E8%AF%BE.html>2023-04-25 新爸五年计划 | 303 烹饪课</a></li>
 
@@ -2096,8 +2096,6 @@
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202315%20%7C%20%E5%A4%8D%E8%B7%91%E7%AC%AC%E5%9B%9B%E5%91%A8.html>2023-04-16 折返点 2315 | 复跑第四周</a></li>
 
 <li><a href=tifa-233.com/%E9%9A%8F%E7%AC%94%20-%20C%2B%2B%20%E7%9A%84%E9%AB%98%E7%BB%B4%E5%90%91%E9%87%8F.html>2023-04-16 随笔 - C++ 的高维向量</a></li>
-
-<li><a href=sakurawald.github.io/play%20on%20wallpaper.html>2023-04-15 play on wallpaper</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E8%A7%89%E9%86%92%2001%20%E5%A5%91%E6%9C%BA%20%E8%A7%89%E6%82%9F%E4%B9%8B%E8%BD%AE.html>2023-04-13 觉醒 01 契机 觉悟之轮</a></li>
 
@@ -2235,8 +2233,6 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%9C%88%E8%AF%BB%202023%E4%BA%8C%E6%9C%88.html>2023-03-01 月读 2023二月</a></li>
 
-<li><a href=sakurawald.github.io/play%20on%20google%20pixel.html>2023-02-27 play on google pixel</a></li>
-
 <li><a href=jasonkayzk.github.io/%E6%8E%A8%E8%8D%90%E4%B8%80%E4%BA%9B%E5%8F%B0%E5%BC%8F%E6%9C%BA%E5%85%B1%E4%BA%AB%E9%9F%B3%E8%A7%86%E9%A2%91%E7%9A%84%E8%BD%AF%E4%BB%B6.html>2023-02-26 推荐一些台式机共享音视频的软件</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202308%20%7C%20%E7%96%97%E4%BC%A4%E7%AC%AC%E5%9B%9B%E5%91%A8.html>2023-02-26 折返点 2308 | 疗伤第四周</a></li>
@@ -2319,13 +2315,11 @@
 
 <li><a href=xnum.github.io/2023%E5%B9%B4%E7%B6%AD%E8%AD%B7%E9%9B%9C%E8%A8%98.html>2023-01-27 2023年維護雜記</a></li>
 
-<li><a href=sakurawald.github.io/play%20on%20hexo.html>2023-01-25 play on hexo</a></li>
-
 <li><a href=gitee.com/MulanRevive/bounty/%E6%9C%A8%E5%85%B0%E8%AE%BE%E8%AE%A1%E4%B8%8E%E5%AE%9E%E7%8E%B0%E4%B8%AD%E7%9A%84%E5%90%84%E7%A7%8D%E5%B7%A7%E6%80%9D.html>2023-01-25 木兰设计与实现中的各种巧思</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202303%20%EF%BD%9C%E6%AF%8F%E5%A4%A9%E8%B7%91%E6%AD%A5%E4%BC%9A%E5%BD%B1%E5%93%8D%E2%80%9C%E5%A7%A8%E5%A6%88%E2%80%9D%E5%90%97%EF%BC%9F%20.html>2023-01-23 折返点 2303 ｜每天跑步会影响“姨妈”吗？ </a></li>
 
-<li><a href=sakurawald.github.io/%5BDatabase%5D%20Design.html>2023-01-22 [Database] Design</a></li>
+<li><a href=sakurawald.github.io/database%20schema%20design.html>2023-01-22 database schema design</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20%7C%20290%20%E8%BE%9E%E6%97%A7%E5%B2%81.html>2023-01-21 新爸五年计划 | 290 辞旧岁</a></li>
 
@@ -3231,8 +3225,6 @@
 
 <li><a href=jerkwin.github.io/%E6%9B%BE%E7%BB%8F%E7%9A%84%E6%B5%B7.html>2022-06-14 曾经的海</a></li>
 
-<li><a href=sakurawald.github.io/%5BJSP%5D%20Servlet%20%26%20JSP%20Short-Hand.html>2022-06-13 [JSP] Servlet & JSP Short-Hand</a></li>
-
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20%7C%20258%20%E5%86%8D%E8%A7%81%EF%BC%8CKapka.html>2022-06-13 新爸五年计划 | 258 再见，Kapka</a></li>
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E4%BB%80%E4%B9%88%E6%98%AF%E6%9E%B6%E6%9E%84%E8%AE%BE%E8%AE%A1V4.html>2022-06-12 什么是架构设计V4</a></li>
@@ -3479,7 +3471,7 @@
 
 <li><a href=tifa-233.com/Namomo%20Spring%20Camp%202022%20Div1%20%E6%AF%8F%E6%97%A5%E4%B8%80%E9%A2%98%E8%AE%B0%E5%BD%95%20%28Week%2010%29.html>2022-04-30 Namomo Spring Camp 2022 Div1 每日一题记录 (Week 10)</a></li>
 
-<li><a href=sakurawald.github.io/%5BDatabase%5D%20Relational%20Query%20Language.html>2022-04-30 [Database] Relational Query Language</a></li>
+<li><a href=sakurawald.github.io/database%20relational%20query%20language.html>2022-04-30 database relational query language</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202217%EF%BD%9C%E4%B8%8D%E6%B1%82%E7%8C%9B%EF%BC%8C%E6%B1%82%E6%81%92%EF%BC%8C%E6%98%AF%E6%88%91%E8%B7%91%E6%AD%A5%E7%9A%84%E5%BA%A7%E5%8F%B3%E9%93%AD.html>2022-04-30 折返点 2217｜不求猛，求恒，是我跑步的座右铭</a></li>
 
@@ -3487,23 +3479,21 @@
 
 <li><a href=jerkwin.github.io/%E4%BD%BF%E7%94%A8gnuplot%E7%BB%98%E5%88%B6%E5%B1%B1%E4%BD%93%E9%98%B4%E5%BD%B1%E5%9B%BE.html>2022-04-30 使用gnuplot绘制山体阴影图</a></li>
 
-<li><a href=sakurawald.github.io/%5BDatabase%5D%20Advanced%20SQL.html>2022-04-29 [Database] Advanced SQL</a></li>
+<li><a href=sakurawald.github.io/database%20advanced%20sql.html>2022-04-29 database advanced sql</a></li>
 
 <li><a href=blog.forecho.com/%E4%BD%BF%E7%94%A8%20Xdebug.html>2022-04-29 使用 Xdebug</a></li>
 
-<li><a href=sakurawald.github.io/%5BDatabase%5D%20Intermediate%20SQL.html>2022-04-29 [Database] Intermediate SQL</a></li>
+<li><a href=sakurawald.github.io/database%20intermediate%20sql.html>2022-04-29 database intermediate sql</a></li>
 
 <li><a href=www.cnfeat.com/A%20%E7%BA%A7%E7%8E%A9%E5%AE%B6%E7%9A%84%E7%A7%98%E5%AF%86%E6%AD%A6%E5%99%A8.html>2022-04-29 A 级玩家的秘密武器</a></li>
 
-<li><a href=sakurawald.github.io/%5BDatabase%5D%20Elementary%20SQL.html>2022-04-28 [Database] Elementary SQL</a></li>
+<li><a href=sakurawald.github.io/database%20elementary%20sql.html>2022-04-28 database elementary sql</a></li>
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E4%B8%80%E4%B8%AA%E6%9E%B6%E6%9E%84%E8%AE%BE%E8%AE%A1%E6%A8%A1%E7%B3%8A%E7%B2%BE%E7%A1%AE%E7%9A%84%E4%BE%8B%E5%AD%90.html>2022-04-27 一个架构设计模糊精确的例子</a></li>
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E7%A1%AC%E7%BC%96%E7%A0%81Tag%E6%96%B9%E6%A1%88.html>2022-04-27 硬编码Tag方案</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E5%86%A5%E6%83%B3%EF%BC%8C%E4%BB%8E%E7%BB%83%E4%B9%A0%E5%9D%90%E5%A7%BF%E5%BC%80%E5%A7%8B.html>2022-04-27 冥想，从练习坐姿开始</a></li>
-
-<li><a href=sakurawald.github.io/%5BAlgorithm%5D%20Oiling%20Car%20%26%20Optimal%20Merge.html>2022-04-27 [Algorithm] Oiling Car & Optimal Merge</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E5%BF%AB%E4%B9%90%E5%9C%B0%E6%94%BE%E6%89%8B.html>2022-04-26 快乐地放手</a></li>
 
@@ -3529,13 +3519,13 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%BD%E5%87%BA%E7%89%87%E5%88%BB%20%E8%82%AF%E5%AE%9A%E8%87%AA%E5%B7%B1.html>2022-04-19 抽出片刻 肯定自己</a></li>
 
-<li><a href=sakurawald.github.io/%5BAlgorithm%5D%20Multiple-Knapsack%20Problem%20%26%20Pebble%20Merge%20Problem.html>2022-04-19 [Algorithm] Multiple-Knapsack Problem & Pebble Merge Problem</a></li>
+<li><a href=sakurawald.github.io/solve%20multiple-knapsack%20problem%20%26%20pebble%20merge%20problem.html>2022-04-19 solve multiple-knapsack problem & pebble merge problem</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20%7C%20250%20Dosewillips%20State%20Park.html>2022-04-19 新爸五年计划 | 250 Dosewillips State Park</a></li>
 
 <li><a href=sakurawald.github.io/play%20on%20stl.html>2022-04-18 play on stl</a></li>
 
-<li><a href=sakurawald.github.io/%5BBranch-Bound%5D%20Circle%20Permutation.html>2022-04-17 [Branch-Bound] Circle Permutation</a></li>
+<li><a href=sakurawald.github.io/solve%20circle%20permutation%20problem.html>2022-04-17 solve circle permutation problem</a></li>
 
 <li><a href=mabbs.github.io/%E4%BD%93%E9%AA%8C%E6%88%90%E4%B8%BAPCDN%E7%9A%84%E8%8A%82%E7%82%B9.html>2022-04-17 体验成为PCDN的节点</a></li>
 
@@ -3549,7 +3539,7 @@
 
 <li><a href=jerkwin.github.io/%E5%8A%9B%E5%9C%BA%E6%8B%9F%E5%90%88%E5%B7%A5%E5%85%B7xff%E5%BC%80%E5%8F%91%E6%9D%82%E8%AE%B0.html>2022-04-15 力场拟合工具xff开发杂记</a></li>
 
-<li><a href=sakurawald.github.io/%5BAlgorithm%5D%20Back-Tracking%20%26%20IDDFS.html>2022-04-12 [Algorithm] Back-Tracking & IDDFS</a></li>
+<li><a href=sakurawald.github.io/solve%20back-tracking%20%26%20IDDFS.html>2022-04-12 solve back-tracking & IDDFS</a></li>
 
 <li><a href=qingbob.com/%E5%B8%AE%E5%8A%A9%E5%9B%A2%E9%98%9F%E6%88%90%E9%95%BF%E6%98%AF%E5%94%AF%E4%B8%80%E7%9A%84%E5%87%BA%E8%B7%AF.html>2022-04-12 帮助团队成长是唯一的出路</a></li>
 
@@ -3573,7 +3563,7 @@
 
 <li><a href=conge.livingwithfcs.org/%E7%AE%80%E5%8D%95%E5%86%A5%E6%83%B3.html>2022-04-08 简单冥想</a></li>
 
-<li><a href=sakurawald.github.io/%5BCodeSnippet%5D%20-%20A%20Simple%20Judger%20for%20Java.html>2022-04-05 [CodeSnippet] - A Simple Judger for Java</a></li>
+<li><a href=sakurawald.github.io/a%20simple%20judger%20in%20java.html>2022-04-05 a simple judger in java</a></li>
 
 <li><a href=blog.forecho.com/%E6%B7%B1%E5%9C%B3%E5%B0%81%E5%9F%8E%E8%AE%B0%E5%BD%95.html>2022-04-05 深圳封城记录</a></li>
 
@@ -3605,7 +3595,7 @@
 
 <li><a href=blog.forecho.com/Laravel%20Passport%20OAuth2%20%E5%AE%9E%E8%B7%B5.html>2022-03-28 Laravel Passport OAuth2 实践</a></li>
 
-<li><a href=sakurawald.github.io/%5BAlgorithm%5D%20Set%20Partition%20Problem.html>2022-03-27 [Algorithm] Set Partition Problem</a></li>
+<li><a href=sakurawald.github.io/solve%20set%20partition%20problem.html>2022-03-27 solve set partition problem</a></li>
 
 <li><a href=mabbs.github.io/%E7%94%A8%E6%A0%91%E8%8E%93%E6%B4%BE%E8%87%AA%E5%88%B6FM%E7%94%B5%E5%8F%B0.html>2022-03-27 用树莓派自制FM电台</a></li>
 
@@ -3619,7 +3609,7 @@
 
 <li><a href=hijiangtao.github.io/%E9%98%B2%E7%96%AB%E6%97%A5%E8%AE%B0.html>2022-03-26 防疫日记</a></li>
 
-<li><a href=sakurawald.github.io/%5BAlgorithm%5D%20Majority%20Problem.html>2022-03-25 [Algorithm] Majority Problem</a></li>
+<li><a href=sakurawald.github.io/solve%20majority%20problem.html>2022-03-25 solve majority problem</a></li>
 
 <li><a href=shiina18.github.io/%E6%B7%B1%E5%BA%A6%E5%AD%A6%E4%B9%A0%E5%90%90%E6%A7%BD%E6%9D%82%E5%BD%95.html>2022-03-25 深度学习吐槽杂录</a></li>
 
@@ -4385,7 +4375,7 @@
 
 <li><a href=codeinchinese.com/%E3%80%90%E5%9B%9E%E7%AD%94%E3%80%91%E7%94%A8%E6%B1%89%E5%AD%97%E4%BD%9C%E4%B8%BA%E5%8F%98%E9%87%8F%E5%90%8D%E5%92%8C%E5%87%BD%E6%95%B0%E5%90%8D%E6%9C%89%E4%BB%80%E4%B9%88%E9%97%AE%E9%A2%98%3F.html>2021-09-14 【回答】用汉字作为变量名和函数名有什么问题?</a></li>
 
-<li><a href=sakurawald.github.io/Expression%20Evaluation.html>2021-09-13 Expression Evaluation</a></li>
+<li><a href=sakurawald.github.io/expression%20evulation.html>2021-09-13 expression evulation</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202136%EF%BD%9C%E7%A7%8B%E5%A4%A9%E5%BF%AB%E6%9D%A5%E4%BA%86.html>2021-09-12 折返点 2136｜秋天快来了</a></li>
 
@@ -5268,8 +5258,6 @@
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202105%EF%BD%9C%20%E8%87%AA%E8%A1%8C%E8%BD%A6%20.html>2021-02-07 折返点 2105｜ 自行车 </a></li>
 
 <li><a href=blog.mauve.icu/Codeforces%20Round%23699%20%28Div.%202%29.html>2021-02-06 Codeforces Round#699 (Div. 2)</a></li>
-
-<li><a href=sakurawald.github.io/use%20c%20language%20standard%20library%20to%20solve%20problems%21.html>2021-02-06 use c language standard library to solve problems!</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20%7C%20188%20%E8%AF%A5%E4%B8%8D%E8%AF%A5%E5%AF%B9%E5%B0%8F%E5%AD%A9%E5%AD%90%E8%BF%9B%E8%A1%8C%E6%94%BF%E6%B2%BB%E4%B8%8A%E7%9A%84%E6%95%99%E8%82%B2%E5%91%A2.html>2021-02-06 新爸五年计划 | 188 该不该对小孩子进行政治上的教育呢</a></li>
 
@@ -6458,8 +6446,6 @@
 <li><a href=tifa-233.com/%E7%AC%94%E8%AE%B0%20-%20%E6%89%A9%E5%B1%95%E4%B8%AD%E5%9B%BD%E5%89%A9%E4%BD%99%E5%AE%9A%E7%90%86%28exCRT%29.html>2020-10-06 笔记 - 扩展中国剩余定理(exCRT)</a></li>
 
 <li><a href=gitee.com/MulanRevive/bounty/%E6%9C%A8%E5%85%B0%E9%87%8D%E7%94%9F%EF%BC%9A%E4%B8%8E%20Python%20%E7%94%9F%E6%80%81%E7%9A%84%E5%85%BC%E5%AE%B9%E9%97%AE%E9%A2%98%EF%BC%9B%E5%AD%97%E7%AC%A6%E4%B8%B2%E6%8F%92%E5%80%BC.html>2020-10-06 木兰重生：与 Python 生态的兼容问题；字符串插值</a></li>
-
-<li><a href=sakurawald.github.io/play-on-wordpress.html>2020-10-05 play-on-wordpress</a></li>
 
 <li><a href=tifa-233.com/%E7%AC%94%E8%AE%B0%20-%20%E6%95%B4%E9%99%A4%E5%88%86%E5%9D%97%2C%20Dirichlet%E5%8D%B7%E7%A7%AF%2C%20Dirichlet%E5%89%8D%E7%BC%80%E5%92%8C%2C%20%E7%A7%AF%E6%80%A7%E5%87%BD%E6%95%B0%2C%20M%C3%B6bius%E5%8F%8D%E6%BC%94%2C%20%E6%9D%9C%E6%95%99%E7%AD%9B.html>2020-10-05 笔记 - 整除分块, Dirichlet卷积, Dirichlet前缀和, 积性函数, Möbius反演, 杜教筛</a></li>
 
