--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -83,6 +83,7 @@
 <p>Your coding year in review: <a href="https://githubunwrapped.com">https://githubunwrapped.com</a></p>
 <p>Efforts to clean up the JS ecosystem: <a href="https://github.com/es-tooling/ecosystem-cleanup">https://github.com/es-tooling/ecosystem-cleanup</a></p>
 <p>An interactive tutorial to Learn Yjs: <a href="https://learn.yjs.dev">https://learn.yjs.dev</a></p>
+<p>A simple tool for redirecting you: <a href="https://github.com/kodie/redirectmeto">https://github.com/kodie/redirectmeto</a></p>
 <hr/>
 <h2>CSS related</h2>
 <p>Defensive CSS - writing CSS that is protected: <a href="https://ishadeed.com/article/defensive-css">https://ishadeed.com/article/defensive-css</a></p>
