--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8788 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8795 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202504%20%E6%B8%85%E5%8D%8E%E5%86%AC%E5%AD%A3%E5%8B%87%E5%A3%AB%E8%B5%9B%E7%AC%AC%E5%9B%9B%E5%91%A8.html>2025-01-30 折返点 2504 清华冬季勇士赛第四周</a></li>
+
+<li><a href=jasonkayzk.github.io/%E9%80%9A%E8%BF%87GithubActions%E6%8B%89%E5%8F%96%E5%B9%B6%E6%8E%A8%E9%80%81Docker%E9%95%9C%E5%83%8F%E5%88%B0%E5%9B%BD%E5%86%85%E4%BA%91.html>2025-01-30 通过GithubActions拉取并推送Docker镜像到国内云</a></li>
+
+<li><a href=gitee.com/MulanRevive/bounty/Python%20%E8%BD%AC%E6%8D%A2%E6%9C%A8%E5%85%B0%E5%8A%9F%E8%83%BD%E4%BF%AE%E6%AD%A3%EF%BC%9A%E4%BA%8C%E5%85%83%E8%BF%90%E7%AE%97%E5%8A%A0%E6%8B%AC%E5%8F%B7.html>2025-01-30 Python 转换木兰功能修正：二元运算加括号</a></li>
+
+<li><a href=jasonkayzk.github.io/%E4%BD%BF%E7%94%A8AnythingLLM%2BSillconFlow%2BMilvus%E5%BF%AB%E9%80%9F%E6%90%AD%E5%BB%BA%E4%B8%AA%E4%BA%BA%E4%BA%91%E7%AB%AF%E7%9F%A5%E8%AF%86%E5%BA%93.html>2025-01-29 使用AnythingLLM+SillconFlow+Milvus快速搭建个人云端知识库</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202504%20%E6%96%B0%E5%B9%B4%E8%A1%A8%E6%BC%94.html>2025-01-24 父范学堂 2504 新年表演</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202503%20%E6%98%A5%E8%8A%B1%E4%B8%8E%E5%B0%8F%E7%86%8A.html>2025-01-23 父范学堂 2503 春花与小熊</a></li>
 
 <li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E6%91%B8%E7%B4%A2%EF%BC%88%E5%8D%81%E4%BA%8C%EF%BC%89%EF%BC%9A%E6%B3%9B%E5%9E%8B%E4%B9%8Bwhere%E3%80%81%E5%8F%8D%E9%9D%A2%E4%BB%A3%E7%A0%81%E5%88%9D%E6%8E%A2.html>2025-01-23 Rust 在线摸索（十二）：泛型之where、反面代码初探</a></li>
 
@@ -32,6 +44,8 @@
 <li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E6%91%B8%E7%B4%A2%EF%BC%88%E4%B8%83%EF%BC%89%EF%BC%9Astruct.html>2025-01-18 Rust 在线摸索（七）：struct</a></li>
 
 <li><a href=informal.top/Weekly-%2320%20AutoSwitch%20Translate.html>2025-01-18 Weekly-#20 AutoSwitch Translate</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202502%20%E8%82%89%E9%85%B1%E5%8D%83%E5%B1%82%E9%9D%A2%20%E5%8A%A0%E8%8F%B2%E7%8C%AB%E6%9C%80%E7%88%B1.html>2025-01-17 父范学堂 2502 肉酱千层面 加菲猫最爱</a></li>
 
 <li><a href=jasonkayzk.github.io/%E3%80%90%E9%A1%B6%E3%80%91%E3%81%95%E3%82%88%E3%81%AA%E3%82%89%EF%BC%92%EF%BC%90%EF%BC%92%EF%BC%94%E3%80%81%E3%81%93%E3%82%93%E3%81%AB%E3%81%A1%E3%81%AF%EF%BC%92%EF%BC%90%EF%BC%92%EF%BC%95%EF%BC%81.html>2025-01-17 【顶】さよなら２０２４、こんにちは２０２５！</a></li>
 
