--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -208,6 +208,7 @@
 <p>The Guide to Building a Vue.js Component Library: <a href="https://soubiran.dev/series/the-complete-guide-to-building-a-vue-js-component-library">https://soubiran.dev/series/the-complete-guide-to-building-a-vue-js-component-library</a></p>
 <p>The Guide to Setting Up a New Nuxt Project: <a href="https://soubiran.dev/posts/the-perfect-guide-to-setting-up-a-new-nuxt-project">https://soubiran.dev/posts/the-perfect-guide-to-setting-up-a-new-nuxt-project</a></p>
 <p>3D page flip effect for Vue2 and Vue3: <a href="https://github.com/ts1/flipbook-vue">https://github.com/ts1/flipbook-vue</a></p>
+<p>Modern and Performant Bottom Sheet for Vue: <a href="https://github.com/megaarmos/vue-spring-bottom-sheet">https://github.com/megaarmos/vue-spring-bottom-sheet</a></p>
 <p>Clerk official SDK for Vue: <a href="https://clerk.com/changelog/2025-01-07-vue-and-nuxt-sdk">https://clerk.com/changelog/2025-01-07-vue-and-nuxt-sdk</a></p>
 <hr/>
 <h2>Browsers related</h2>
